
ò
schema.proto"$
NoisePayload
nonce (Rnonce"B
Open
deviceId (RdeviceId

capability (R
capability"
Verify
type (Rtype"
Prove
secret (Rsecret"!
ReleaseSeed
seed (Rseed")
WantKey

identifier (R
identifier"F

ProvideKey

identifier (R
identifier
diffKey (RdiffKey"#
Close
deviceId (RdeviceId